# research-experiments

./: .gitattributes  .gitignore  README.md
docs/: Gemfile  _config.yml  about.md  blog.md  index.md  projects.md
docs/_layouts/: default.html
docs/_posts/: 2026-02-09-recursion-phase-transitions-initial-results.md  2026-03-04-ipa-trie-visualization.md  TEMPLATE.md
projects/01-naming-in-combinatory-logic/: A1_PLAN.md  Cargo.toml  README.md  analyze.py
projects/01-naming-in-combinatory-logic/paper/: paper.tex
projects/01-naming-in-combinatory-logic/src/: analysis.rs  enumerate.rs  main.rs  reduce.rs  term.rs
projects/01-recursion-phase-transitions/: README.md  RESEARCH.md  results.csv
projects/01-recursion-phase-transitions/src/: db.rs  lib.rs
projects/02-ipa-trie-visualization/: Makefile.toml  README.md  semantic-dimensionality-explorer.jsx
projects/02-ipa-trie-visualization/data/: de.txt  en_US.txt  es_ES.txt  fr_FR.txt  nl.txt
projects/02-ipa-trie-visualization/data/ipa.db/: 000016.sst  000019.sst  000024.sst  IDENTITY  LOG.old.1772680754973728  LOG.old.1772680759547777  LOG.old.1772681015694689  LOG.old.1772681070496387  MANIFEST-000026  OPTIONS-000028
projects/02-ipa-trie-visualization/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
projects/02-ipa-trie-visualization/frontend/src/: App.tsx  main.tsx
projects/02-ipa-trie-visualization/frontend/src/components/: AnalysisView.tsx  CameraController.tsx  CrossLingView.tsx  EdgeRenderer.tsx  FilterPanel.tsx  GlowRenderer.tsx  InfoTooltip.tsx  LabelOverlay.tsx  NavSidebar.tsx  NodeDetailPanel.tsx  NodeRenderer.tsx  PhonologyView.tsx  Picker.tsx  SearchPanel.tsx  StatsBar.tsx  StatsDashboard.tsx  Tooltip.tsx  Viewport.tsx
projects/02-ipa-trie-visualization/frontend/src/graphql/: queries.ts
projects/02-ipa-trie-visualization/frontend/src/hooks/: useLOD.ts  useTrieData.ts
projects/02-ipa-trie-visualization/frontend/src/store/: filterStore.ts  trieDataStore.ts  viewStore.ts
projects/02-ipa-trie-visualization/frontend/src/styles/: theme.ts
projects/02-ipa-trie-visualization/ipa-pipeline/: .gitignore  .mcp.json  Cargo.toml
projects/02-ipa-trie-visualization/ipa-pipeline/crates/ipa-core/: Cargo.toml
projects/02-ipa-trie-visualization/ipa-pipeline/crates/ipa-core/src/: lib.rs  normalizer.rs  phoneme_inventory.rs  tokenizer.rs  types.rs
projects/02-ipa-trie-visualization/ipa-pipeline/crates/ipa-db/: Cargo.toml
projects/02-ipa-trie-visualization/ipa-pipeline/crates/ipa-db/src/: lib.rs  queries.rs  schema.rs  store.rs
projects/02-ipa-trie-visualization/ipa-pipeline/crates/ipa-export/: Cargo.toml
projects/02-ipa-trie-visualization/ipa-pipeline/crates/ipa-export/src/: essay_json.rs  lib.rs  stats_json.rs  trie_json.rs
projects/02-ipa-trie-visualization/ipa-pipeline/crates/ipa-ingest/: Cargo.toml
projects/02-ipa-trie-visualization/ipa-pipeline/crates/ipa-ingest/src/: cmu.rs  download.rs  lib.rs  phoible.rs  wikipron.rs
projects/02-ipa-trie-visualization/ipa-pipeline/crates/ipa-server/: Cargo.toml
projects/02-ipa-trie-visualization/ipa-pipeline/crates/ipa-server/src/: main.rs  store.rs
projects/02-ipa-trie-visualization/ipa-pipeline/crates/ipa-server/src/schema/: mod.rs  types.rs
projects/02-ipa-trie-visualization/ipa-pipeline/crates/ipa-trie/: Cargo.toml
projects/02-ipa-trie-visualization/ipa-pipeline/crates/ipa-trie/src/: analysis.rs  layout.rs  lib.rs  motifs.rs  trie.rs
projects/02-ipa-trie-visualization/ipa-pipeline/src/: main.rs
projects/02-ipa-trie-visualization/scripts/: analyze_phonology.py  build_trie.py  download_data.py  find_allophones.py  gen_cross_linguistic_stats.py
projects/02-ipa-trie-visualization/web/: essay.html  index.html  package-lock.json  package.json  vite.config.ts
projects/02-ipa-trie-visualization/web/src/: main.ts  types.ts
(+30 files in other folders)
