[package]
name = "ipa-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
unicode-normalization = { workspace = true }
unicode-segmentation = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unicode-general-category = "1"

[dev-dependencies]
pretty_assertions = "1"
