[package]
name = "ipa-export"
version = "0.1.0"
edition = "2024"

[dependencies]
ipa-core = { path = "../ipa-core" }
ipa-trie = { path = "../ipa-trie" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
