[package]
name = "ipa-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
ipa-core = { path = "../ipa-core" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
indicatif = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
